# react-nextjs

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  Makefile  README.md  dev.bat  eslint.config.js  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.json
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SETUP.md  alembic.ini  docker-compose.yaml  env.example  pgadmin_servers.json  prometheus.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/models/: auth.py
backend/scripts/: dev.py
backend/scripts/locust/: admin_task_set.py  hero_task_set.py  locust.conf  locustfile.py  permission_task_set.py  user_task_set.py  utils.py
backend/scripts/locust/reports/: locust_report.html  locust_stats_failures.csv  locust_stats_stats.csv  locust_stats_stats_history.csv
backend/src/core/: __init__.py  db.py  settings.py
backend/src/core/alembic/: env.py  script.py.mako
backend/src/core/alembic/versions/: 5f30f65d13b7_init_db.py  c7d5aa8f7b8a_init_db.py
backend/src/domain/: __init__.py
backend/src/domain/models/: __init__.py  hero.py  permission.py  team.py  user.py  user_permission.py
backend/src/domain/repositories/: __init__.py  exceptions.py  hero.py  permission.py  team.py  user.py  user_permission.py
backend/src/web/: __init__.py  main.py
backend/src/web/api/: __init__.py  signing.py
backend/src/web/api/routes/: __init__.py  app.py  hero.py  permission.py  team.py  user.py
backend/src/web/services/: __init__.py  hero.py  permission.py  team.py  user.py
backend/tests/: conftest.py  test_main.py
backend/tests/core/: test_settings.py
backend/tests/domain/repositories/: test_hero.py  test_permission.py  test_team.py  test_user.py  test_user_permission.py
backend/tests/web/: conftest.py  test_main.py
backend/tests/web/api/: test_signing.py
backend/tests/web/api/routes/: test_app.py  test_hero.py  test_permission.py  test_team.py  test_user.py
backend/tests/web/services/: test_hero.py  test_permission.py  test_team.py  test_user.py
docs/: architecture.md  monorepo-setup.md
frontend/: .gitignore  .prettierignore  GOOGLE_OAUTH_SETUP.md  README.md  eslint.config.js  jest.setup.js  next.config.js  package-lock.json  tsconfig.json
frontend/public/: manifest.json  offline.html
frontend/scripts/: generate-icons.js
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  global-error.tsx  layout.tsx
frontend/src/components/: AuthProvider.tsx  ComponentErrorBoundary.tsx  ErrorBoundary.tsx  GlobalErrorBoundary.tsx  Navigation.tsx  PageErrorBoundary.tsx
frontend/src/config/: auth.ts  index.ts
frontend/src/hooks/: useNavigation.ts
frontend/src/lib/: api.ts  auth.ts  env.ts
frontend/src/services/: authService.ts
frontend/src/types/: auth.ts  global.d.ts
frontend/src/utils/: performanceUtils.ts
public/: offline.html
scripts/: dev.ps1  dev.sh  generate-icons.js
src/__tests__/app/: error.test.tsx  global-error.test.tsx  layout.test.tsx  not-found.test.tsx  page.test.tsx  providers.test.tsx  theme.test.ts
src/__tests__/components/: EnvInfo.test.tsx  ErrorBoundary.test.tsx  GlobalErrorBoundary.test.tsx  OfflineIndicator.test.tsx  PWAInstaller.test.tsx  PageErrorBoundary.test.tsx
src/__tests__/examples/: advanced.test.tsx
src/__tests__/integration/: app.test.tsx
src/__tests__/lib/: env.test.ts  (+1 more)
src/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx
src/components/: ComponentErrorBoundary.tsx  EnvInfo.tsx  OfflineIndicator.tsx  PWAInstaller.tsx
src/config/: routes.ts
src/hooks/: useDashboard.ts  useMemoizedPermissions.ts  usePermissions.ts
src/lib/: env.ts  errorReporting.ts
src/store/: uiStore.ts
src/types/: env.d.ts  global.d.ts
(+52 files in other folders)
